reoranizes+complete the app